<resources>
    <string name="app_name">gasto de viajem</string>
    <string name="distancia">distancia</string>
    <string name="total_de_km">Total de km</string>
    <string name="pre_o">preço</string>
    <string name="pre_o_total">preço total</string>
    <string name="autonomia">autonomia</string>
    <string name="km_por_litro">km por litro</string>
    <string name="_0r">0R$</string>
    <string name="calcular">Calcular</string>
    <string name="seu_gasto_total_ser_de">Seu gasto total será de</string>
    <string name="notificação">notificação</string>
    <string name="porfavor">Por favor informe valores validos</string>
</resources>