<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


   <EditText
       android:id="@+id/editTotaldekm"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:hint="@string/distancia"
       android:inputType="number"/>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:text="@string/total_de_km"
       tools:layout_editor_absoluteX="168dp"
       tools:layout_editor_absoluteY="45dp" />

   <EditText
       android:id="@+id/editPreco"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/pre_o"
       android:layout_marginTop="32dp"
       tools:layout_editor_absoluteX="0dp"
       tools:layout_editor_absoluteY="64dp"
       android:inputType="numberDecimal"/>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:text="@string/pre_o_total"
       tools:layout_editor_absoluteX="168dp"
       tools:layout_editor_absoluteY="109dp" />

   <EditText
       android:id="@+id/editAutonomia"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/autonomia"
       android:inputType="number"
       android:layout_marginTop="32dp"
       tools:layout_editor_absoluteX="0dp"
       tools:layout_editor_absoluteY="138dp" />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:text="@string/km_por_litro"
       tools:layout_editor_absoluteX="168dp"
       tools:layout_editor_absoluteY="183dp" />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="50dp"
       android:text="@string/seu_gasto_total_ser_de"
       android:textAllCaps="true"
       android:paddingHorizontal="48dp"
       android:textSize="20sp"
       tools:layout_editor_absoluteX="77dp"
       tools:layout_editor_absoluteY="253dp" />

   <TextView
       android:id="@+id/textTotalValue"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_marginTop="5dp"
       android:paddingHorizontal="150dp"
       android:text="@string/_0r"
       android:textColor="#3F51B5"
       android:textSize="40sp" />


   <Button
       android:id="@+id/confirmButtom"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/calcular"
       android:textSize="35sp"
       android:padding="19dp"
       android:background="@color/verdinho"
       android:layout_marginTop="13dp"
       android:textColor="#fff"
       tools:layout_editor_absoluteX="149dp"
       tools:layout_editor_absoluteY="375dp" />

   <ImageView
       android:layout_width="90dp"
       android:layout_height="44dp"
       android:layout_marginHorizontal="150dp"
       android:src="@drawable/ic_android_black_24dp" />

</LinearLayout>




